@@ -17,6 +17,7 @@
 ---------------
 --April 07, 2013
 ---------------
+[60] --> fix break in stats
 [59] --> fix merge
 [58] --> merge from home
 [57] --> 434 up, merge from home some new tactics
